# kayo

./: .gitignore  .gitmodules  glInit.js  glStaticObject.js  index.html  math.js  package-lock.json  package.json  renderer.js  shader.js  staticMesh3Vert.glsl  staticPBRMRFrag.glsl  style.css  tsconfig.json  ui-styles.css  vite.config.ts  webpack.dev.js  webpack.prod.js
assets/: index-5fUJ1qCH.js  index-C13FLeaE.css
frontend/: .eslintrc.js  .gitignore  .prettierrc  README.md  (+8 more)
frontend/src/c/: .clang-format  CMakeLists.txt  CMakeUserPresets.json  KayoCorePP.d.ts  KayoCorePP.js  KayoCorePP.wasm  KayoCorePP.wasm.map  KayoPP.d.ts  KayoPP.js  KayoPP.js.symbols  KayoPP.wasm  KayoPP.wasm.map  KayoPPLoader.ts  hello.cpp  hello.d.ts  hello.js  hello.wasm  hello.wasm.map  makefile  wasmHello.ts  zlibUtil.cpp  zlibUtil.hpp
frontend/src/c/nbt/: nbt.cpp  nbt.hpp
frontend/src/c/parse/: nbt.hpp  parse.cpp  parse.hpp
frontend/src/c/src/: context.cpp  hello.cpp  libKayo.js
frontend/src/c/src/kayoCore/core/: SVTConfig.cpp  SVTConfig.hpp  TimeLine.cpp  TimeLine.hpp  config.cpp  config.hpp  jsMap.hpp  jsViewControlled.cpp  jsViewControlled.hpp  kayoCore.cpp  kayoCore.hpp  project.cpp  project.hpp  projectData.cpp  projectData.hpp  renderConfig.cpp  renderConfig.hpp  renderState.cpp  renderState.hpp  state.cpp  state.hpp  vector.hpp
frontend/src/c/src/kayoCore/r3/: R3Manager.cpp  R3Manager.hpp  R3Object.cpp  R3Object.hpp  projection.cpp  projection.hpp
frontend/src/c/src/kayoCore/task/: Task.cpp  Task.hpp  createMipAtlas.cpp  createMipAtlas.hpp
frontend/src/c/src/kayoCore/utils/: imageUtils.hpp  imageUtls.cpp  memUtils.cpp  memUtils.hpp  zlibUtil.hpp
frontend/src/c/src/mesh/: mesh.cpp  mesh.hpp  realtimeVertexBuffer.cpp
frontend/src/c/src/minecraft/: context.cpp  context.hpp  nbt.cpp  parse.cpp  parse.hpp  world.cpp  world.hpp
frontend/src/c/src/numerics/: fixed.cpp  fixed.hpp  mat2.hpp  mat4.hpp  splineCurve.cpp  splineCurve.hpp  splineCurveSegment.cpp  splineCurveSegment.hpp  vec2.hpp  vec3.hpp  vec3_forward.hpp  vec4.hpp
frontend/src/c/src/parse/: minecraftWorld.cpp  minecraftWorld.hpp  nbt.cpp  parse.cpp
frontend/src/c/src/parser/: objParser.hpp
frontend/src/c/src/r3/: R3.cpp  R3.hpp  R3Manager.cpp
frontend/src/c/src/task/: createMipAtlas.cpp  createMipAtlas.hpp  task.hpp
frontend/src/c/src/utils/: imageUtils.cpp  imageUtils.hpp  memUtils.cpp  memUtils.hpp  zlibUtil.cpp  zlibUtil.hpp
frontend/src/c/src/zlibUtil/: zlibUtil.hpp
frontend/src/c/zlibUtil/: zlibUtil.cpp  zlibUtil.hpp
(+582 files in other folders)
